tests/ui/simd-abi-checks-s390x.z10.stderr
error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:45:1
   |
LL | extern "C" fn vector_ret_small(x: &i8x8) -> i8x8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:50:1
   |
LL | extern "C" fn vector_ret(x: &i8x16) -> i8x16 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:96:1
   |
LL | / extern "C" fn vector_transparent_wrapper_ret_small(
LL | |     x: &TransparentWrapper<i8x8>,
LL | | ) -> TransparentWrapper<i8x8> {
   | |_____________________________^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:103:1
   |
LL | / extern "C" fn vector_transparent_wrapper_ret(
LL | |     x: &TransparentWrapper<i8x16>,
LL | | ) -> TransparentWrapper<i8x16> {
   | |______________________________^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:118:1
   |
LL | extern "C" fn vector_arg_small(x: i8x8) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:123:1
   |
LL | extern "C" fn vector_arg(x: i8x16) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:134:1
   |
LL | extern "C" fn vector_wrapper_arg_small(x: Wrapper<i8x8>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:139:1
   |
LL | extern "C" fn vector_wrapper_arg(x: Wrapper<i8x16>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:150:1
   |
LL | extern "C" fn vector_transparent_wrapper_arg_small(x: TransparentWrapper<i8x8>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: ABI error: this function definition uses a vector vector type, which is not enabled
  --> $DIR/simd-abi-checks-s390x.rs:155:1
   |
LL | extern "C" fn vector_transparent_wrapper_arg(x: TransparentWrapper<i8x16>) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider enabling it globally (-C target-feature=+vector) or locally (#[target_feature(enable="vector")])

error: aborting due to 10 previous errors

